:zap: :hammer: Refactor star animation and more responsive design

--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title></title>
-	<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="overlay"></div>
-	<div class="stars1" aria-hidden="true"></div>
-	<div class="stars2" aria-hidden="true"></div>
-	<div class="stars3" aria-hidden="true"></div>
-	<main>
-		<section class="container">
+    <div class="stars" id="stars"></div>
+    <main>
+		<section>
 			<h1 class="title"></h1>
+			<div class="hr-container">
+				<hr class="hr">
+			</div>
 			<h2 class="sub-title"></h2>
 		</section>
 	</main>
 	<footer>
 		<p class="copyright"></p>
 	</footer>
-	<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
